# FlashMM

./: .env.dev  .env.template  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  Dockerfile.production  INFRASTRUCTURE_SUMMARY.md  LICENSE  Makefile  Makefile.deploy  README.md  README_MONITORING_SYSTEM.md  WINDOWS_INSTALLATION_GUIDE.md  api-specifications.md  architecture-diagram.md  architecture-overview.md  azure-openai-integration.md  configuration-management.md  deployment-workflows.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  external-integrations.md  project-structure.md  pyproject.toml  requirements.txt  security-architecture.md  technology-stack.md
.github/workflows/: ci-cd.yml  release.yml  security-scan.yml
config/environments/: development.yml  testnet.yml
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT_GUIDE.md  DEVELOPER.md  OPERATIONS.md  README.md  USER_GUIDE.md
docs/deployment/: README.md
environments/: deploy.sh
environments/development/: values.yaml
environments/production/: values.yaml
environments/staging/: values.yaml
helm/flashmm/: Chart.yaml  values.yaml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  persistentvolume.yaml  rbac.yaml  secrets.yaml  service.yaml
monitoring/alertmanager/: alertmanager.yml
monitoring/elasticsearch/: elasticsearch.yml
monitoring/grafana/dashboards/: flashmm-overview.json
monitoring/kibana/: kibana.yml
monitoring/logstash/pipeline/: logstash.conf
monitoring/prometheus/: prometheus.yml
monitoring/prometheus/rules/: flashmm-alerts.yml
scripts/: backup.sh  deploy-production.sh  health-check.sh  rollback.sh  run_tests.py  scale.sh  security_integration_demo.py  test_sei_testnet_execution.py  validate_blockchain_integration.py  validate_performance.py  validate_security_system.py
security/policies/: network-policy.yaml  pod-security-policy.yaml
security/scripts/: security-scan.sh
src/flashmm/: __init__.py  main.py
src/flashmm/api/: __init__.py  app.py
src/flashmm/api/routers/: __init__.py  admin.py  health.py  metrics.py  trading.py
src/flashmm/blockchain/: __init__.py  account_manager.py  blockchain_monitor.py  blockchain_service.py  market_config.py  order_manager.py  sei_client.py  transaction_manager.py
src/flashmm/config/: __init__.py  constants.py  environments.py  settings.py
src/flashmm/demo/: README.md  ml_prediction_demo.py  pipeline_demo.py
src/flashmm/ml/: __init__.py  prediction_service.py
src/flashmm/ml/clients/: __init__.py  azure_openai_client.py
src/flashmm/ml/fallback/: __init__.py  rule_based_engine.py
src/flashmm/ml/features/: __init__.py  feature_extractor.py
src/flashmm/ml/inference/: inference_engine.py
src/flashmm/ml/models/: __init__.py  prediction_models.py  predictor.py
src/flashmm/ml/prompts/: __init__.py  market_prompts.py
src/flashmm/ml/reliability/: __init__.py  circuit_breaker.py
src/flashmm/monitoring/: __init__.py  ml_metrics.py  monitoring_service.py  performance_tracker.py
src/flashmm/monitoring/alerts/: alert_manager.py
src/flashmm/monitoring/analytics/: performance_analyzer.py
src/flashmm/monitoring/dashboards/: dashboard_generator.py  grafana_client.py
src/flashmm/monitoring/social/: twitter_client.py
src/flashmm/monitoring/streaming/: data_streamer.py
src/flashmm/monitoring/telemetry/: metrics_collector.py
src/flashmm/risk/: __init__.py  circuit_breakers.py  emergency_protocols.py  market_risk_monitor.py  operational_risk.py  pnl_controller.py  position_limits.py  risk_reporter.py
src/flashmm/security/: __init__.py  audit_logger.py  auth.py  emergency_manager.py  encryption.py  key_manager.py  pentest_framework.py  policy_engine.py  security_monitor.py  security_orchestrator.py
src/flashmm/tests/risk/: __init__.py  test_circuit_breakers.py  test_emergency_protocols.py  test_enhanced_integration.py  test_integration.py  test_market_risk_monitor.py  test_operational_risk.py  test_pnl_controller.py  test_position_limits.py  test_utils.py
src/flashmm/trading/: __init__.py
src/flashmm/trading/engine/: __init__.py  market_making_engine.py
src/flashmm/trading/execution/: __init__.py  (+2 more)
src/flashmm/utils/: __init__.py  decorators.py  exceptions.py  logging.py
terraform/: main.tf  outputs.tf  variables.tf
terraform/modules/aws/: main.tf  outputs.tf  variables.tf
tests/: conftest.py
tests/blockchain/: __init__.py  test_blockchain_service.py  test_order_router_integration.py
tests/deployment/: run_all_tests.sh  test_infrastructure.py
tests/integration/: test_data_pipeline.py  test_market_making_engine.py  test_monitoring_integration.py  test_prediction_pipeline.py  test_sei_testnet_integration.py
tests/monitoring/: test_suite.py
tests/performance/: load_test.py  test_latency_benchmarks.py
tests/security/: __init__.py  test_enhanced_auth.py  test_security_integration.py  test_security_orchestrator.py
tests/unit/: test_config.py  test_data_models.py  test_data_normalizer.py  test_prediction_engine.py  test_quote_optimizer.py  test_websocket_client.py
(+10 files in other folders)
